src/grammers/.antlr/MiniFlaskParser.java
// Generated from c://Users//sait//Desktop//compiler//Flask-Jinja-compiler//src//grammers//MiniFlaskParser.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class MiniFlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, IF=2, RETURN=3, APP=4, ROUTE=5, FOR=6, IN=7, FROM=8, IMPORT=9, 
		NONE=10, TRUE=11, FALSE=12, STRING=13, NUMBER=14, IDENT=15, AT=16, DOT=17, 
		LPAREN=18, RPAREN=19, LBRACK=20, RBRACK=21, LBRACE=22, RBRACE=23, COMMA=24, 
		COLON=25, EQUALS=26, PLUS=27, STAR=28, DOUBLESTAR=29, EQEQ=30, COMMENT=31, 
		WS=32, NEWLINE=33;
	public static final int
		RULE_file = 0, RULE_statement = 1, RULE_importStmt = 2, RULE_importNames = 3, 
		RULE_routeDef = 4, RULE_routeArgs = 5, RULE_routeArg = 6, RULE_funcDef = 7, 
		RULE_params = 8, RULE_param = 9, RULE_simpleParam = 10, RULE_defaultParam = 11, 
		RULE_typeAnnotatedParam = 12, RULE_typeAnnotatedDefaultParam = 13, RULE_starParam = 14, 
		RULE_doubleStarParam = 15, RULE_typeExpr = 16, RULE_assign = 17, RULE_ifStmt = 18, 
		RULE_returnStmt = 19, RULE_exprStmt = 20, RULE_expr = 21, RULE_additive = 22, 
		RULE_primary = 23, RULE_suffix = 24, RULE_routeArgKws = 25, RULE_arg = 26, 
		RULE_atom = 27, RULE_listLiteral = 28, RULE_dictLiteral = 29, RULE_pair = 30, 
		RULE_genExpr = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "statement", "importStmt", "importNames", "routeDef", "routeArgs", 
			"routeArg", "funcDef", "params", "param", "simpleParam", "defaultParam", 
			"typeAnnotatedParam", "typeAnnotatedDefaultParam", "starParam", "doubleStarParam", 
			"typeExpr", "assign", "ifStmt", "returnStmt", "exprStmt", "expr", "additive", 
			"primary", "suffix", "routeArgKws", "arg", "atom", "listLiteral", "dictLiteral", 
			"pair", "genExpr"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'if'", "'return'", "'app'", "'route'", "'for'", "'in'", 
			"'from'", "'import'", "'None'", "'True'", "'False'", null, null, null, 
			"'@'", "'.'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", 
			"'='", "'+'", "'*'", "'**'", "'=='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "IF", "RETURN", "APP", "ROUTE", "FOR", "IN", "FROM", "IMPORT", 
			"NONE", "TRUE", "FALSE", "STRING", "NUMBER", "IDENT", "AT", "DOT", "LPAREN", 
			"RPAREN", "LBRACK", "RBRACK", "LBRACE", "RBRACE", "COMMA", "COLON", "EQUALS", 
			"PLUS", "STAR", "DOUBLESTAR", "EQEQ", "COMMENT", "WS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MiniFlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MiniFlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(MiniFlaskParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(MiniFlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(MiniFlaskParser.NEWLINE, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8595570462L) != 0)) {
				{
				{
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==NEWLINE) {
					{
					{
					setState(64);
					match(NEWLINE);
					}
					}
					setState(69);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(70);
				statement();
				setState(74);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(71);
						match(NEWLINE);
						}
						} 
					}
					setState(76);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				}
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskAssignStmtContext extends StatementContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public FlaskAssignStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteDefStmtContext extends StatementContext {
		public RouteDefContext routeDef() {
			return getRuleContext(RouteDefContext.class,0);
		}
		public FlaskRouteDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskFuncDefStmtContext extends StatementContext {
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public FlaskFuncDefStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskIfStmtContext extends StatementContext {
		public IfStmtContext ifStmt() {
			return getRuleContext(IfStmtContext.class,0);
		}
		public FlaskIfStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskReturnStmtContext extends StatementContext {
		public ReturnStmtContext returnStmt() {
			return getRuleContext(ReturnStmtContext.class,0);
		}
		public FlaskReturnStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportStmtContext extends StatementContext {
		public ImportStmtContext importStmt() {
			return getRuleContext(ImportStmtContext.class,0);
		}
		public FlaskImportStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskExprStmtContext extends StatementContext {
		public ExprStmtContext exprStmt() {
			return getRuleContext(ExprStmtContext.class,0);
		}
		public FlaskExprStmtContext(StatementContext ctx) { copyFrom(ctx); }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				_localctx = new FlaskImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				importStmt();
				}
				break;
			case 2:
				_localctx = new FlaskRouteDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(85);
				routeDef();
				}
				break;
			case 3:
				_localctx = new FlaskFuncDefStmtContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				funcDef();
				}
				break;
			case 4:
				_localctx = new FlaskAssignStmtContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(87);
				assign();
				}
				break;
			case 5:
				_localctx = new FlaskIfStmtContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(88);
				ifStmt();
				}
				break;
			case 6:
				_localctx = new FlaskReturnStmtContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(89);
				returnStmt();
				}
				break;
			case 7:
				_localctx = new FlaskExprStmtContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(90);
				exprStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStmtContext extends ParserRuleContext {
		public ImportStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStmt; }
	 
		public ImportStmtContext() { }
		public void copyFrom(ImportStmtContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskFromImportStmtContext extends ImportStmtContext {
		public TerminalNode FROM() { return getToken(MiniFlaskParser.FROM, 0); }
		public TerminalNode IDENT() { return getToken(MiniFlaskParser.IDENT, 0); }
		public TerminalNode IMPORT() { return getToken(MiniFlaskParser.IMPORT, 0); }
		public ImportNamesContext importNames() {
			return getRuleContext(ImportNamesContext.class,0);
		}
		public FlaskFromImportStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportNamesStmtContext extends ImportStmtContext {
		public TerminalNode IMPORT() { return getToken(MiniFlaskParser.IMPORT, 0); }
		public ImportNamesContext importNames() {
			return getRuleContext(ImportNamesContext.class,0);
		}
		public FlaskImportNamesStmtContext(ImportStmtContext ctx) { copyFrom(ctx); }
	}

	public final ImportStmtContext importStmt() throws RecognitionException {
		ImportStmtContext _localctx = new ImportStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStmt);
		try {
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				_localctx = new FlaskImportNamesStmtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				match(IMPORT);
				setState(94);
				importNames();
				}
				break;
			case FROM:
				_localctx = new FlaskFromImportStmtContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(95);
				match(FROM);
				setState(96);
				match(IDENT);
				setState(97);
				match(IMPORT);
				setState(98);
				importNames();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportNamesContext extends ParserRuleContext {
		public ImportNamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importNames; }
	 
		public ImportNamesContext() { }
		public void copyFrom(ImportNamesContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskImportNameListContext extends ImportNamesContext {
		public List<TerminalNode> IDENT() { return getTokens(MiniFlaskParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(MiniFlaskParser.IDENT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MiniFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MiniFlaskParser.COMMA, i);
		}
		public FlaskImportNameListContext(ImportNamesContext ctx) { copyFrom(ctx); }
	}

	public final ImportNamesContext importNames() throws RecognitionException {
		ImportNamesContext _localctx = new ImportNamesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importNames);
		int _la;
		try {
			_localctx = new FlaskImportNameListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(IDENT);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(102);
				match(COMMA);
				setState(103);
				match(IDENT);
				}
				}
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteDefContext extends ParserRuleContext {
		public RouteDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeDef; }
	 
		public RouteDefContext() { }
		public void copyFrom(RouteDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteDefinitionContext extends RouteDefContext {
		public TerminalNode AT() { return getToken(MiniFlaskParser.AT, 0); }
		public TerminalNode APP() { return getToken(MiniFlaskParser.APP, 0); }
		public TerminalNode DOT() { return getToken(MiniFlaskParser.DOT, 0); }
		public TerminalNode ROUTE() { return getToken(MiniFlaskParser.ROUTE, 0); }
		public TerminalNode LPAREN() { return getToken(MiniFlaskParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MiniFlaskParser.RPAREN, 0); }
		public TerminalNode NEWLINE() { return getToken(MiniFlaskParser.NEWLINE, 0); }
		public FuncDefContext funcDef() {
			return getRuleContext(FuncDefContext.class,0);
		}
		public RouteArgsContext routeArgs() {
			return getRuleContext(RouteArgsContext.class,0);
		}
		public FlaskRouteDefinitionContext(RouteDefContext ctx) { copyFrom(ctx); }
	}

	public final RouteDefContext routeDef() throws RecognitionException {
		RouteDefContext _localctx = new RouteDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_routeDef);
		int _la;
		try {
			_localctx = new FlaskRouteDefinitionContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(AT);
			setState(110);
			match(APP);
			setState(111);
			match(DOT);
			setState(112);
			match(ROUTE);
			setState(113);
			match(LPAREN);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING || _la==IDENT) {
				{
				setState(114);
				routeArgs();
				}
			}

			setState(117);
			match(RPAREN);
			setState(118);
			match(NEWLINE);
			setState(119);
			funcDef();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteArgsContext extends ParserRuleContext {
		public RouteArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeArgs; }
	 
		public RouteArgsContext() { }
		public void copyFrom(RouteArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteArgsListContext extends RouteArgsContext {
		public List<RouteArgContext> routeArg() {
			return getRuleContexts(RouteArgContext.class);
		}
		public RouteArgContext routeArg(int i) {
			return getRuleContext(RouteArgContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MiniFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MiniFlaskParser.COMMA, i);
		}
		public FlaskRouteArgsListContext(RouteArgsContext ctx) { copyFrom(ctx); }
	}

	public final RouteArgsContext routeArgs() throws RecognitionException {
		RouteArgsContext _localctx = new RouteArgsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_routeArgs);
		int _la;
		try {
			_localctx = new FlaskRouteArgsListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			routeArg();
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(122);
				match(COMMA);
				setState(123);
				routeArg();
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class RouteArgContext extends ParserRuleContext {
		public RouteArgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_routeArg; }
	 
		public RouteArgContext() { }
		public void copyFrom(RouteArgContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteArgStringContext extends RouteArgContext {
		public TerminalNode STRING() { return getToken(MiniFlaskParser.STRING, 0); }
		public FlaskRouteArgStringContext(RouteArgContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskRouteArgKwContext extends RouteArgContext {
		public TerminalNode IDENT() { return getToken(MiniFlaskParser.IDENT, 0); }
		public TerminalNode EQUALS() { return getToken(MiniFlaskParser.EQUALS, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public FlaskRouteArgKwContext(RouteArgContext ctx) { copyFrom(ctx); }
	}

	public final RouteArgContext routeArg() throws RecognitionException {
		RouteArgContext _localctx = new RouteArgContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_routeArg);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new FlaskRouteArgStringContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(129);
				match(STRING);
				}
				break;
			case IDENT:
				_localctx = new FlaskRouteArgKwContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(130);
				match(IDENT);
				setState(131);
				match(EQUALS);
				setState(132);
				expr();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FuncDefContext extends ParserRuleContext {
		public FuncDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_funcDef; }
	 
		public FuncDefContext() { }
		public void copyFrom(FuncDefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskFunctionDefContext extends FuncDefContext {
		public TerminalNode DEF() { return getToken(MiniFlaskParser.DEF, 0); }
		public TerminalNode IDENT() { return getToken(MiniFlaskParser.IDENT, 0); }
		public TerminalNode LPAREN() { return getToken(MiniFlaskParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MiniFlaskParser.RPAREN, 0); }
		public TerminalNode COLON() { return getToken(MiniFlaskParser.COLON, 0); }
		public TerminalNode NEWLINE() { return getToken(MiniFlaskParser.NEWLINE, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public FlaskFunctionDefContext(FuncDefContext ctx) { copyFrom(ctx); }
	}

	public final FuncDefContext funcDef() throws RecognitionException {
		FuncDefContext _localctx = new FuncDefContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_funcDef);
		int _la;
		try {
			int _alt;
			_localctx = new FlaskFunctionDefContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(135);
			match(DEF);
			setState(136);
			match(IDENT);
			setState(137);
			match(LPAREN);
			setState(139);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 805339136L) != 0)) {
				{
				setState(138);
				params();
				}
			}

			setState(141);
			match(RPAREN);
			setState(142);
			match(COLON);
			setState(143);
			match(NEWLINE);
			setState(147);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(144);
					statement();
					}
					} 
				}
				setState(149);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,10,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
	 
		public ParamsContext() { }
		public void copyFrom(ParamsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamsListContext extends ParamsContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(MiniFlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(MiniFlaskParser.COMMA, i);
		}
		public FlaskParamsListContext(ParamsContext ctx) { copyFrom(ctx); }
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_params);
		int _la;
		try {
			_localctx = new FlaskParamsListContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			param();
			setState(155);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(151);
				match(COMMA);
				setState(152);
				param();
				}
				}
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamContext extends ParserRuleContext {
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	 
		public ParamContext() { }
		public void copyFrom(ParamContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamDoubleStarContext extends ParamContext {
		public DoubleStarParamContext doubleStarParam() {
			return getRuleContext(DoubleStarParamContext.class,0);
		}
		public FlaskParamDoubleStarContext(ParamContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamTypeDefaultContext extends ParamContext {
		public TypeAnnotatedDefaultParamContext typeAnnotatedDefaultParam() {
			return getRuleContext(TypeAnnotatedDefaultParamContext.class,0);
		}
		public FlaskParamTypeDefaultContext(ParamContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamTypeContext extends ParamContext {
		public TypeAnnotatedParamContext typeAnnotatedParam() {
			return getRuleContext(TypeAnnotatedParamContext.class,0);
		}
		public FlaskParamTypeContext(ParamContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamSimpleContext extends ParamContext {
		public SimpleParamContext simpleParam() {
			return getRuleContext(SimpleParamContext.class,0);
		}
		public FlaskParamSimpleContext(ParamContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamDefaultContext extends ParamContext {
		public DefaultParamContext defaultParam() {
			return getRuleContext(DefaultParamContext.class,0);
		}
		public FlaskParamDefaultContext(ParamContext ctx) { copyFrom(ctx); }
	}
	@SuppressWarnings("CheckReturnValue")
	public static class FlaskParamStarContext extends ParamContext {
		public StarParamContext starParam() {
			return getRuleContext(StarParamContext.class,0);
		}
		public FlaskParamStarContext(ParamContext ctx) { copyFrom(ctx); }
	}
